fix: spacing

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -759,6 +759,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .block {
   display: block;
 }
